--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "server": "cd server && npm run start:dev",
-    "client": "npm start --prefix client",
+    "server": "cd server && npm run dev",
+    "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\" "
   },
   "browserslist": {
